# fishwarp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
bigstitcher/: array2bigstitcher_example.ipynb  bigstitcher_interest_points.py  to_bigstitcher.py  zarr2bigstitcher_example.py
bigstitcher/tests/: test_create_bigstitcher_dataset.py  test_write_dataset_xml.py
bigstream/: environment.yml  evaluate_registration.ipynb  example_distributed.ipynb  metrics.py  utils.py
bigstream/stitch/: register_and_stitch.ipynb
cellpose/: config_example.json  environment.yml  get_segmentation.ipynb  utils.py
