[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fishwarp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "zarr>=2.18,<3",
    "dask[distributed]>=2024",
    "numpy>=1.26",
    "lxml>=5",
    "numcodecs>=0.12",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
# auto-discovers bigstitcher/, bigstream/, cellpose/ as top-level packages
where = ["."]
include = ["bigstitcher*", "bigstream*", "cellpose*"]

[tool.pytest.ini_options]
testpaths = [
    "bigstitcher/tests",
    "bigstream/tests",
]
